--- a/src/app/devices/devices.component.html
+++ b/src/app/devices/devices.component.html
@@ -1,7 +1,9 @@
 <h3 class="text-center mt-3 mb-3">Devices</h3>
 
 <br />
-<button class="btn btn-primary" (click)="routeToCompare()">Compare</button>
+<div class="span12 text-center">
+	<button class="btn btn-lg btn-outline-primary" (click)="routeToCompare()">Compare</button>
+</div>
 <br />
 <div class="container-fluid">
   <div class="row">
