Added quiz functionality

--- a/src/app/filter-view/filter-view.component.html
+++ b/src/app/filter-view/filter-view.component.html
@@ -64,7 +64,7 @@
             <option value="7 MP">7 MP</option>
             <option value="8 MP">8 MP</option>
             <option value="13 MP">13 MP</option>
-            <option value="16 MP">16 MB</option>
+            <option value="16 MP">16 MP</option>
         </select>
       </div>
     </div>   
@@ -82,9 +82,9 @@
             <option value="12.2 MP">12.2 MP</option>
             <option value="12.3 MP">12.3 MP</option>
             <option value="13 MP">13 MP</option>
-            <option value="16 MP">16 MB</option>
-            <option value="20 MP">20 MB</option>
-            <option value="21 MP">21 MB</option>
+            <option value="16 MP">16 MP</option>
+            <option value="20 MP">20 MP</option>
+            <option value="21 MP">21 MP</option>
         </select>
       </div>
     </div>
