--- a/src/app/search-view/search-view.component.css
+++ b/src/app/search-view/search-view.component.css
@@ -6,11 +6,6 @@
 
 [class*='col-']:last-of-type { padding-right: 0; }
 
-/* a { text-decoration: none; } */
-/* .deviceContainer {
-  text-decoration: none;
-} */
-
 *, *:after, *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -28,6 +23,11 @@ h4 { position: relative; }
 .grid-pad { padding: 10px 0; }
 
 .grid-pad > [class*='col-']:last-of-type { padding-right: 20px; }
+
+.card > input {
+	height: 20px;
+	width: 20px;
+}
 
 @media (min-width: 768px) { h3 { font-size: 3rem; } }
 
