--- a/src/app/filter-view/filter-view.component.html
+++ b/src/app/filter-view/filter-view.component.html
@@ -137,7 +137,7 @@
       </div>
     </div>
     <div class="col-6 offset-3 offset-sm-0 order-3 order-sm-2 text-center">
-      <div class="select-container">
+      <div class="select-container arrow-fix-1">
         <h5>Location Options: </h5>
         <select class="mb-3" (change)="filterParams.location=$event.target.value">
             <option value=""></option>
@@ -162,7 +162,7 @@
   <hr>
   <div class="row">
     <div class="col-6 text-center">
-      <div class="select-container">
+      <div class="select-container arrow-fix-2">
         <h5 class="dbl-line-455">Screen of Phone: </h5>
         <select (change)="filterParams.screen=$event.target.value">
           <option value=""></option>
@@ -178,7 +178,7 @@
       </div>
     </div>  
     <div class="col-6 text-center">
-      <div class="select-container">
+      <div class="select-container arrow-fix-2">
         <h5>Network Options of Phone:</h5>
         <select (change)="filterParams.network=$event.target.value">
           <option value=""></option>
