--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="col-12 my-3">
+<div class="col-12 py-3 grey-bg">
 
 <div class="col-10 col-sm-6 col-lg-4 offset-1 offset-sm-3 offset-lg-4 my-3">
 	<h4 class="col-12 text-center">Search phone</h4>
