--- a/src/app/device-details/device-details.component.css
+++ b/src/app/device-details/device-details.component.css
@@ -12,6 +12,8 @@
 
 @media screen and (min-width: 992px) {
 	.img-wrap { position: absolute; }
-	.scale-one-and-half-lg { transform: scale(1.5); }
-	.top-10-lg { top: 10rem; }
+	.center-screen {
+		top: 100px;
+		bottom: 100px;
+	}
 }
